Use the new fingerprint during unpacking, not the old.

BUG=651971

Review-Url: https://codereview.chromium.org/2384873002
Cr-Commit-Position: refs/heads/master@{#422287}

Former-commit-id: 6e5db035aabd894b433c7ebc4fbb9af525612083